# optimal-task-allocation

./: .pre-commit-config.yaml  README.md  allocate.ipynb  inputs.xlsx  pyproject.toml  requirements.txt  utils.py
