[tool.poetry]
name = "optimal-task-allocation"
version = "0.1.0"
description = ""
authors = ["Edgars Jakobsons <ejakobsons@microsoft.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
PuLP = "^2.9.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
